--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,120 +9,171 @@
         android:id="@+id/char_label"
         android:layout_width="141dp"
         android:layout_height="34dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Character Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="45dp" />
+        app:layout_constraintBottom_toTopOf="@+id/char_editor"
+        app:layout_constraintStart_toStartOf="@+id/char_editor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/char_editor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginBottom="123dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="79dp" />
+        app:layout_constraintBottom_toTopOf="@+id/skill_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/diff_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="Difficulty"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintBottom_toTopOf="@+id/diff_selector"
+        app:layout_constraintStart_toStartOf="@+id/diff_selector" />
 
     <Spinner
         android:id="@+id/diff_selector"
         android:layout_width="347dp"
-        android:layout_height="23dp"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="209dp" />
+        android:layout_height="39dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="392dp"
+        app:layout_constraintBottom_toTopOf="@+id/create"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/skill_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
         android:text="Skill Points"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="266dp" />
+        app:layout_constraintBottom_toTopOf="@+id/pilot"
+        app:layout_constraintEnd_toEndOf="@+id/pilot"
+        app:layout_constraintStart_toEndOf="@+id/pilot"
+        app:layout_constraintTop_toBottomOf="@+id/char_editor" />
 
     <EditText
         android:id="@+id/pilot"
-        android:layout_width="45dp"
-        android:layout_height="43dp"
+        android:layout_width="47dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginBottom="33dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="310dp" />
+        app:layout_constraintBottom_toTopOf="@+id/fighter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skill_label" />
 
     <EditText
         android:id="@+id/engineer"
         android:layout_width="45dp"
-        android:layout_height="43dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="42dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="255dp"
-        tools:layout_editor_absoluteY="310dp" />
+        app:layout_constraintBottom_toTopOf="@+id/trader_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fighter" />
 
     <EditText
         android:id="@+id/fighter"
         android:layout_width="45dp"
-        android:layout_height="43dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="425dp" />
+        app:layout_constraintBottom_toTopOf="@+id/engineer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pilot" />
 
     <EditText
         android:id="@+id/trader"
-        android:layout_width="45dp"
-        android:layout_height="43dp"
+        android:layout_width="46dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="255dp"
-        tools:layout_editor_absoluteY="425dp" />
+        app:layout_constraintBottom_toTopOf="@+id/create"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/pilot_label"
-        android:layout_width="48dp"
-        android:layout_height="20dp"
+        android:layout_width="46dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginBottom="19dp"
         android:text="Pilot"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="367dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/pilot"
+        app:layout_constraintStart_toEndOf="@+id/pilot"
+        app:layout_constraintTop_toBottomOf="@+id/skill_label" />
 
     <TextView
         android:id="@+id/engineer_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:text="Engineer"
-        tools:layout_editor_absoluteX="255dp"
-        tools:layout_editor_absoluteY="367dp" />
+        app:layout_constraintStart_toEndOf="@+id/engineer"
+        app:layout_constraintTop_toTopOf="@+id/engineer" />
 
     <TextView
         android:id="@+id/fighter_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:text="Fighter"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="493dp" />
+        app:layout_constraintStart_toEndOf="@+id/fighter"
+        app:layout_constraintTop_toTopOf="@+id/fighter" />
 
     <TextView
         android:id="@+id/trader_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="172dp"
         android:text="Trader"
-        tools:layout_editor_absoluteX="258dp"
-        tools:layout_editor_absoluteY="493dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/trader"
+        app:layout_constraintTop_toBottomOf="@+id/engineer" />
 
     <Button
         android:id="@+id/create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
         android:text="Create Character"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="625dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
