Created UniverseCreated xml and button response

--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -157,10 +157,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
-        android:onClick="onAddPressed"
+        android:layout_marginBottom="20dp"
+        android:onClick="sendMessage"
         android:text="Create Character" />
 
 </RelativeLayout>
