--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    tools:context="com.example.guwap.view.ConfigurationActivity"
+    android:layout_height="match_parent"
+    tools:context="com.example.guwap.view.ConfigurationActivity">
 
 
     <TextView
@@ -160,7 +160,7 @@
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
         android:layout_marginBottom="20dp"
-        android:onClick="sendMessage"
+        android:onClick="onAddPressed"
         android:text="Create Character" />
 
 </RelativeLayout>
