--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,18 +7,13 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_market"
-        android:icon="@drawable/ic_attach_money_black_24dp"
-        android:title="Market" />
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_Map"
-        android:icon="@drawable/ic_add_region_black_24dp"
-        android:title="Map" />
-
-    <item
-        android:id="@+id/navigation_Player"
-        android:icon="@drawable/ic_person_black_24dp"
-        android:title="Player" />
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_notifications" />
 
 </menu>
