--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_market"
+        android:icon="@drawable/ic_attach_money_black_24dp"
+        android:title="Market"
+        android:onClick="onClickMarket"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_map"
+        android:icon="@android:drawable/arrow_up_float"
+        android:title="Travel"
+        android:onClick="onClickTravel"/>
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_player"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="player" />
 
 </menu>
