--- a/app/src/main/res/layout/activity_bandit_encounter.xml
+++ b/app/src/main/res/layout/activity_bandit_encounter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BanditEncounterActivity">
+    tools:context="com.example.guwap.view.BanditEncounterActivity">
 
 
     <TextView
@@ -26,6 +26,7 @@
         android:layout_marginBottom="-439dp"
         android:text="Tip Hat"
         android:layout_marginLeft="18dp"
+        android:onClick="onTipPressed"
         />
 
     <Button
@@ -38,6 +39,7 @@
         android:layout_marginBottom="0dp"
         android:layout_toEndOf="@+id/tip_hat"
         android:layout_toRightOf="@+id/tip_hat"
+        android:onClick="onShootPressed"
         android:text="Shoot" />
 
     <Button
@@ -50,6 +52,7 @@
         android:layout_marginBottom="0dp"
         android:layout_toEndOf="@+id/shoot"
         android:layout_toRightOf="@+id/shoot"
+        android:onClick="onRunPressed"
         android:text="Run" />
 
     <ImageView
