--- a/app/src/main/res/layout/activity_encounter.xml
+++ b/app/src/main/res/layout/activity_encounter.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <Button
         android:id="@+id/meet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="100dp"
         android:onClick="onMeetPressed"
         android:text="Confront" />
 
@@ -14,13 +16,15 @@
         android:id="@+id/run"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="25dp"
+        android:layout_toRightOf="@id/meet"
         android:onClick="onRunPressed"
         android:text="Run" />
 
-    <TextView
-        android:id="@+id/warning"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SOMEONE APPROACHES"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+    <ImageView
+        android:id="@+id/challenger"
+        android:layout_width="match_parent"
+        android:layout_height="427dp"
+        app:srcCompat="@drawable/challenger" />
 </RelativeLayout>
