XMLs for ConflictResolved, EncounterActivity, GamerOver, LoadActivity, and TitleScreen.

--- a/app/src/main/res/layout/activity_encounter.xml
+++ b/app/src/main/res/layout/activity_encounter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/black">
 
     <Button
         android:id="@+id/meet"
@@ -9,8 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="100dp"
+        android:background="@android:color/white"
         android:onClick="onMeetPressed"
-        android:text="Confront" />
+        android:text="Confront"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/run"
@@ -19,8 +22,10 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@id/meet"
+        android:background="@android:color/white"
         android:onClick="onRunPressed"
-        android:text="Run" />
+        android:text="Run"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/challenger"
