--- a/app/src/main/res/layout/activity_sheriff_encounter.xml
+++ b/app/src/main/res/layout/activity_sheriff_encounter.xml
@@ -65,4 +65,24 @@
         android:layout_marginBottom="-361dp"
         app:srcCompat="@drawable/sheriff" />
 
+    <TextView
+        android:id="@+id/health"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:textSize="70dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:id="@+id/healthLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/health"
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp"
+        android:text="Health" />
+
+
 </RelativeLayout>
